feat: upgrade to stable release